// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RewardsListScreen should render without data 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RewardsListScreen
    data={
      Array [
        Object {
          "cost": "123",
          "day": "Monday",
          "id": "id",
          "month": "April",
          "onPress": [MockFunction],
          "reward": "string",
          "status": "pending",
        },
      ]
    }
    onItemPress={[MockFunction]}
    onLeftTabPress={[MockFunction]}
    onRightTabPress={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <StatusBar
          animated={false}
          showHideTransition="fade"
        />,
        <Pad
          height={40}
        />,
        <Component
          style={
            Object {
              "alignItems": "center",
              "marginTop": 34,
            }
          }
        >
          <RewardTabs
            activeTabIndex={0}
            onLeftTabPress={[MockFunction]}
            onRightTabPress={[MockFunction]}
          />
        </Component>,
        <Component
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <RewardsList
            data={
              Array [
                Object {
                  "cost": "123",
                  "day": "Monday",
                  "id": "id",
                  "month": "April",
                  "onPress": [MockFunction],
                  "reward": "string",
                  "status": "pending",
                },
              ]
            }
            onItemPress={[MockFunction]}
          />
        </Component>,
        <Pad
          height={80}
        />,
      ],
      "style": Object {
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "animated": false,
          "showHideTransition": "fade",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "height": 40,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <RewardTabs
            activeTabIndex={0}
            onLeftTabPress={[MockFunction]}
            onRightTabPress={[MockFunction]}
          />,
          "style": Object {
            "alignItems": "center",
            "marginTop": 34,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "activeTabIndex": 0,
            "onLeftTabPress": [MockFunction],
            "onRightTabPress": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <RewardsList
            data={
              Array [
                Object {
                  "cost": "123",
                  "day": "Monday",
                  "id": "id",
                  "month": "April",
                  "onPress": [MockFunction],
                  "reward": "string",
                  "status": "pending",
                },
              ]
            }
            onItemPress={[MockFunction]}
          />,
          "style": Object {
            "flex": 1,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "data": Array [
              Object {
                "cost": "123",
                "day": "Monday",
                "id": "id",
                "month": "April",
                "onPress": [MockFunction],
                "reward": "string",
                "status": "pending",
              },
            ],
            "onItemPress": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "height": 80,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <StatusBar
            animated={false}
            showHideTransition="fade"
          />,
          <Pad
            height={40}
          />,
          <Component
            style={
              Object {
                "alignItems": "center",
                "marginTop": 34,
              }
            }
          >
            <RewardTabs
              activeTabIndex={0}
              onLeftTabPress={[MockFunction]}
              onRightTabPress={[MockFunction]}
            />
          </Component>,
          <Component
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <RewardsList
              data={
                Array [
                  Object {
                    "cost": "123",
                    "day": "Monday",
                    "id": "id",
                    "month": "April",
                    "onPress": [MockFunction],
                    "reward": "string",
                    "status": "pending",
                  },
                ]
              }
              onItemPress={[MockFunction]}
            />
          </Component>,
          <Pad
            height={80}
          />,
        ],
        "style": Object {
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "animated": false,
            "showHideTransition": "fade",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 40,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <RewardTabs
              activeTabIndex={0}
              onLeftTabPress={[MockFunction]}
              onRightTabPress={[MockFunction]}
            />,
            "style": Object {
              "alignItems": "center",
              "marginTop": 34,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "activeTabIndex": 0,
              "onLeftTabPress": [MockFunction],
              "onRightTabPress": [MockFunction],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <RewardsList
              data={
                Array [
                  Object {
                    "cost": "123",
                    "day": "Monday",
                    "id": "id",
                    "month": "April",
                    "onPress": [MockFunction],
                    "reward": "string",
                    "status": "pending",
                  },
                ]
              }
              onItemPress={[MockFunction]}
            />,
            "style": Object {
              "flex": 1,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "data": Array [
                Object {
                  "cost": "123",
                  "day": "Monday",
                  "id": "id",
                  "month": "April",
                  "onPress": [MockFunction],
                  "reward": "string",
                  "status": "pending",
                },
              ],
              "onItemPress": [MockFunction],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 80,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`RewardsListScreen should render without data 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RewardsListScreen
    data={Array []}
    onItemPress={[MockFunction]}
    onLeftTabPress={[MockFunction]}
    onRightTabPress={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <StatusBar
          animated={false}
          showHideTransition="fade"
        />,
        <Pad
          height={40}
        />,
        <Component
          style={
            Object {
              "alignItems": "center",
              "marginTop": 34,
            }
          }
        >
          <RewardTabs
            activeTabIndex={0}
            onLeftTabPress={[MockFunction]}
            onRightTabPress={[MockFunction]}
          />
        </Component>,
        <Component
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <RewardsList
            data={Array []}
            onItemPress={[MockFunction]}
          />
        </Component>,
        <Pad
          height={80}
        />,
      ],
      "style": Object {
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "animated": false,
          "showHideTransition": "fade",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "height": 40,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <RewardTabs
            activeTabIndex={0}
            onLeftTabPress={[MockFunction]}
            onRightTabPress={[MockFunction]}
          />,
          "style": Object {
            "alignItems": "center",
            "marginTop": 34,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "activeTabIndex": 0,
            "onLeftTabPress": [MockFunction],
            "onRightTabPress": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <RewardsList
            data={Array []}
            onItemPress={[MockFunction]}
          />,
          "style": Object {
            "flex": 1,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "data": Array [],
            "onItemPress": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "height": 80,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <StatusBar
            animated={false}
            showHideTransition="fade"
          />,
          <Pad
            height={40}
          />,
          <Component
            style={
              Object {
                "alignItems": "center",
                "marginTop": 34,
              }
            }
          >
            <RewardTabs
              activeTabIndex={0}
              onLeftTabPress={[MockFunction]}
              onRightTabPress={[MockFunction]}
            />
          </Component>,
          <Component
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <RewardsList
              data={Array []}
              onItemPress={[MockFunction]}
            />
          </Component>,
          <Pad
            height={80}
          />,
        ],
        "style": Object {
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "animated": false,
            "showHideTransition": "fade",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 40,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <RewardTabs
              activeTabIndex={0}
              onLeftTabPress={[MockFunction]}
              onRightTabPress={[MockFunction]}
            />,
            "style": Object {
              "alignItems": "center",
              "marginTop": 34,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "activeTabIndex": 0,
              "onLeftTabPress": [MockFunction],
              "onRightTabPress": [MockFunction],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <RewardsList
              data={Array []}
              onItemPress={[MockFunction]}
            />,
            "style": Object {
              "flex": 1,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "data": Array [],
              "onItemPress": [MockFunction],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 80,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
